# SoulKernel

./: .cursorignore  .gitignore  Cargo.toml  README.md  build.rs  cargo-msvc.cmd  index.html  openmemory.md  tauri.conf.json
.cursor/: README-MCP.md  mcp.json
.github/workflows/: build-linux-artifact.yml  ci.yml  release.yml
crates/soulkernel-core/: Cargo.toml
crates/soulkernel-core/src/: audit.rs  benchmark.rs  device_profile.rs  formula.rs  inventory.rs  kpi.rs  lib.rs  memory_policy.rs  metrics.rs  orchestrator.rs  processes.rs  telemetry.rs  workload_catalog.rs  workload_scenes.json
crates/soulkernel-core/src/platform/: linux.rs  macos.rs  windows.rs
crates/soulkernel-headless/: Cargo.toml
crates/soulkernel-headless/src/: main.rs
crates/soulkernel-lite/: Cargo.toml  build.rs
crates/soulkernel-lite/src/: app.rs  export.rs  fmt.rs  main.rs  state.rs
crates/soulkernel-mcp/: Cargo.toml
crates/soulkernel-mcp/src/: main.rs
crates/soulkernel-profiler/: Cargo.toml
crates/soulkernel-profiler/src/: main.rs
docs/: ENERGY_EVIDENCE_TODO.md  MEROSS.md  VISION.md  linux-soulram-install.md  migration-native-first.md  soulram-backends.md  winmemorycleaner-alignment.md
icons/: gen_icon.ps1  icon.icns
icons/tauri/: icon.icns
runtime/python/: README.md
scripts/: Containerfile.fedora-tauri  cargo-msvc.example.cmd  generate-app-icons.sh  install-linux-soulram.sh  meross_mss315_bridge.py  prepare_embedded_python.py  rocky-tauri-dev.sh  sync-lucide-ui.sh  trusted-sign.ps1
src/: audit.rs  benchmark.rs  external_power.rs  formula.rs  hud.rs  lib.rs  main.rs  memory_policy.rs  metrics.rs  orchestrator.rs  telemetry.rs  workload_catalog.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
tools/: soulkernel_energy_dashboard.html
tools/live-dashboard/: app.js  index.html  server.mjs  styles.css
tools/memlab/: package-lock.json  package.json  run.sh
tools/memlab/scenarios/: app-shell.js  app-shell.ts  live-dashboard.js  live-dashboard.ts
ui/: hud.html  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: App.svelte  app.css  hud-logic.ts  hud-main.ts  hud.css  main.ts
ui/src/legacy/: bootstrap.ts
ui/src/shell/: AppHeader.svelte  BenchmarkSection.svelte  CompactHud.svelte  ExternalPowerSection.svelte  MetricsStrip.svelte  NoTauriBanner.svelte  PanelBottomBar.svelte  PanelCenterFormula.svelte  PanelInsights.svelte  PanelLeftHardware.svelte  PanelRightColumn.svelte  PanelWorkloads.svelte  PowerAuditSection.svelte  SoulKernelShell.svelte
ui/src/styles/: design-tokens.css
ui/styles/: design-tokens.css
