[package]
name = "soulkernel-core"
version = "1.1.8"
edition = "2021"
description = "SoulKernel core runtime and orchestration logic"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
chrono = { version = "0.4", features = ["clock"] }
sysinfo = "0.30"
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.28", features = ["fs", "process", "resource", "sched"] }
procfs = "0.16"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.56", features = [
  "Win32_System_SystemInformation",
  "Win32_System_ProcessStatus",
  "Win32_System_Performance",
  "Win32_System_Power",
  "Win32_System_JobObjects",
  "Win32_Foundation",
  "Win32_System_Threading",
] }
winreg = "0.52"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
system-configuration = "0.6"
