[package]
name = "soulkernel-lite"
version = "1.1.9"
edition = "2021"
description = "SoulKernel native lite UI"

[dependencies]
eframe = { version = "0.33", default-features = true }
egui = "0.33"
rfd = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
soulkernel-core = { path = "../soulkernel-core" }
