[package]
name    = "soulkernel-profiler"
version = "1.1.9"
edition = "2021"
description = "SoulKernel heap & CPU profiler harness — dhat (heap) + pprof (CPU flamegraph)"

[[bin]]
name = "soulkernel-profiler"
path = "src/main.rs"

# ── Features ─────────────────────────────────────────────────────────────────
# Usage :
#   cargo run -p soulkernel-profiler --features dhat-heap -- heap
#   cargo run -p soulkernel-profiler --features pprof-cpu  -- cpu
#   cargo run -p soulkernel-profiler --features dhat-heap,pprof-cpu -- both
[features]
default  = []
dhat-heap = ["dhat"]
pprof-cpu = ["pprof"]

# ── Dependencies ──────────────────────────────────────────────────────────────
[dependencies]
soulkernel-core = { path = "../soulkernel-core" }
serde_json      = "1"
chrono          = { version = "0.4", features = ["clock"] }

[dependencies.dhat]
version  = "0.3"
optional = true

[dependencies.pprof]
version  = "0.13"
optional = true
features = ["flamegraph", "prost-codec"]
